--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.4.0",
     "react-paginate": "^8.1.3",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
